Fix squished stream image in Safari

--- a/web/src/components/CameraStream/Controls/index.less
+++ b/web/src/components/CameraStream/Controls/index.less
@@ -2,7 +2,6 @@
   display: flex;
   width: 100%;
   justify-content: space-evenly;
-  height: 100%;
 
   &__group {
     display: flex;
