--- a/web/src/components/CameraStream/Image/index.less
+++ b/web/src/components/CameraStream/Image/index.less
@@ -1,3 +1,3 @@
 .camera-stream-image {
-  padding-top: 10px;
+  margin-top: 10px;
 }
