--- a/web/src/components/CameraStream/index.less
+++ b/web/src/components/CameraStream/index.less
@@ -1,8 +1,9 @@
 .camera-stream {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
   width: 342px;
-  height: 350px;
+  height: 380px;
   background-color: #1f1f1f;
 }
